--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  font-size: 1.5rem;
+  line-height: 200%;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +12,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html{
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+section{
+  min-height: 100vh;
+  padding: 2rem 0;
+}
+
+.row{
+  margin: 5rem auto !important;
+}
+
+h5{
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  letter-spacing: .1rem;
+}
+
+p {text-transform: capitalize;}
