--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   min-height: 100vh;
   color: #222;
   line-height: 200%;
+  font-size: 1.4rem;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -44,7 +45,11 @@ h5 {
 }
 
 .MuiSvgIcon-root {
-  color: #8e701d !important;
+  color: #8e701d;
+}
+.MuiSvgIcon-root:hover,
+.MuiSvgIcon-root:active {
+  color: #04091e;
 }
 p {
   text-transform: capitalize;
@@ -87,10 +92,8 @@ a:hover {
   .container {
     margin: 3rem auto;
   }
-  body{
-    font-size: 1.4rem;
-  }
-  h5{
+
+  h5 {
     font-size: 1.7rem;
   }
 }
