--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,9 @@ a:hover {
 .success {
   width: 100%;
   height: 5rem;
+  padding: 0.5rem 1rem;
   color: #eee;
-  background-color: #33c533;
+  /* background-color: #33c533; */
   border-radius: 1rem;
   display: flex;
   justify-content: center;
